# puzzler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  option-builder.hpp  option_parser.hpp  puzzle-simulator.hpp  puzzle-solver.hpp  puzzle.txt  utility.hpp
.github/: dependabot.yml
.github/workflows/: base-ci.yml
detail/: option-builder.hpp  puzzle-simulator.hpp  puzzle-solver.hpp  utility.hpp
packaging/: CMakeLists.txt  welcome.txt
